--- a/aud/Cargo.toml
+++ b/aud/Cargo.toml
@@ -24,3 +24,7 @@ rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
 [[bench]]
 name = "utils_benchmark"
 harness = false
+
+[lib]
+name = "pitchdetector"
+crate-type = ["rlib", "dylib"]
