--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-        compile 'com.github.jnr:jnr-ffi:2.0.2'
+        implementation group: 'com.github.axet', name: 'TarsosDSP', version: '2.4-1'
 
         compileOnly 'org.projectlombok:lombok:1.18.22'
         annotationProcessor 'org.projectlombok:lombok:1.18.22'
